add snapshot statistics route
